--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=sistema-gamma-backed
+#cadena de conexion
+spring.datasource.url=jdbc:mysql://localhost:3306/sistema_gamma
+#usuario de la bd
+spring.datasource.username=root
+#clave de la base de datos
+spring.datasource.password=root
+#SQL específico en BD
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#actualizar bd
+spring.jpa.hibernate.ddl-auto=update
+#mostrar SQL en consola
+spring.jpa.show-sql=true
+#SQL legible en consola
+spring.jpa.properties.hibernate.format_sql=true
